[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/sprites/enemy_armor_skeleton.png" type="Texture" id=1]
[ext_resource path="res://objects/enemies/ArmoredSkeleton.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 19.1118, 29 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 3, 10 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 96, 8 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 32, 24 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 8, 16 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 20, 7 )

[sub_resource type="Animation" id=7]
length = 1.75
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 1.2, 1.25, 1.35, 1.4, 1.5, 1.6, 1.65, 1.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1.1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "move_attack"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite/Area2DSword/CollisionSword1:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3, 1.25, 1.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite/Area2DSword/CollisionSword2:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1.25, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=8]
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.3, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 33 ]
}

[sub_resource type="Animation" id=9]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=10]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/Area2DSword/CollisionSword2:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite/Area2DSword/CollisionSword1:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="ArmoredSkeleton" type="KinematicBody2D" groups=[
"enemies",
]]
collision_layer = 4
collision_mask = 25
script = ExtResource( 2 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
position = Vector2( -0.499998, -32 )
scale = Vector2( 2.65, 3.3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -29 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -50 )
texture = ExtResource( 1 )
hframes = 12
vframes = 4
frame = 20

[node name="Area2DDetectNoFloor" type="Area2D" parent="Sprite"]
position = Vector2( -5, 0 )
collision_layer = 4
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/Area2DDetectNoFloor"]
position = Vector2( -11, 60 )
shape = SubResource( 2 )

[node name="RayCast2D" type="RayCast2D" parent="Sprite/Area2DDetectNoFloor"]
position = Vector2( -11, 50 )
enabled = true
cast_to = Vector2( 0, 10 )
collision_mask = 8
__meta__ = {
"_editor_description_": ""
}

[node name="Area2DDetectPlayer" type="Area2D" parent="Sprite"]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/Area2DDetectPlayer"]
position = Vector2( 0, 42 )
shape = SubResource( 3 )

[node name="Area2DDetectPlayerNear" type="Area2D" parent="Sprite"]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/Area2DDetectPlayerNear"]
modulate = Color( 0.192157, 0.67451, 0.0784314, 1 )
position = Vector2( -32, 19 )
shape = SubResource( 4 )

[node name="Area2DSword" type="Area2D" parent="Sprite"]
collision_layer = 4

[node name="CollisionSword1" type="CollisionShape2D" parent="Sprite/Area2DSword"]
position = Vector2( -28, 1 )
shape = SubResource( 5 )
disabled = true

[node name="CollisionSword2" type="CollisionShape2D" parent="Sprite/Area2DSword"]
position = Vector2( -1, -14 )
shape = SubResource( 6 )
disabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/attack = SubResource( 7 )
anims/dead = SubResource( 8 )
anims/idle = SubResource( 9 )
anims/walk = SubResource( 10 )

[node name="TimerHurt" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[connection signal="screen_entered" from="VisibilityEnabler2D" to="." method="_on_VisibilityEnabler2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityEnabler2D" to="." method="_on_VisibilityEnabler2D_screen_exited"]
[connection signal="body_exited" from="Sprite/Area2DDetectNoFloor" to="." method="_on_Area2DDetectNoFloor_body_exited"]
[connection signal="body_entered" from="Sprite/Area2DDetectPlayer" to="." method="_on_Area2DDetectPlayer_body_entered"]
[connection signal="body_entered" from="Sprite/Area2DDetectPlayerNear" to="." method="_on_Area2DDetectPlayerNear_body_entered"]
[connection signal="body_exited" from="Sprite/Area2DDetectPlayerNear" to="." method="_on_Area2DDetectPlayerNear_body_exited"]
[connection signal="body_entered" from="Sprite/Area2DSword" to="." method="_on_Area2DSword_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
